# aboutcars

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
cars/: admin.py  models.py  viewsets.py
cars/migrations/: 0001_initial.py
config/: routers.py  settings.py  urls.py
